@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,8 @@
  */
 
 package com.sun.javafx.application;
+
+import com.sun.javafx.PlatformUtil;
 
 import java.io.File;
 import java.net.URI;
@@ -132,14 +134,18 @@ public abstract class HostServicesDelegate {
 
         @Override
         public void showDocument(final String uri) {
-            String osName = System.getProperty("os.name");
             try {
-                if (osName.startsWith("Mac OS")) {
-                    Runtime.getRuntime().exec(
-                            "open " + uri);
-                } else if (osName.startsWith("Windows")) {
-                    Runtime.getRuntime().exec(
-                            "rundll32 url.dll,FileProtocolHandler " + uri);
+                if (PlatformUtil.isMac()) {
+                    Runtime.getRuntime().exec(new String[] {
+                        "open",
+                        uri
+                    });
+                } else if (PlatformUtil.isWindows()) {
+                    Runtime.getRuntime().exec(new String[] {
+                        "rundll32",
+                        "url.dll,FileProtocolHandler",
+                        uri
+                    });
                 } else { //assume Unix or Linux
                     String browser = null;
                     for (String b : browsers) {
